# IdGas

./: .gitignore  EDA.ipynb  README.md  data_preprocessing.py  eda_utils.py  feature_engineering.py  linreg.py  nn.py  pyproject.toml  random_forest.py  residual_attention_net.py  train.ipynb  two_stage.py  two_stage_rf.py  uda.py  utils.py  xg_boost.py
